Fixed spacing

--- a/src/Components/Navigation/navbar.scss
+++ b/src/Components/Navigation/navbar.scss
@@ -102,7 +102,7 @@ $line-active-color: #434343;
       flex-direction: row; // keep inline
       padding: 10px 20px;
       gap: 12px;
-      border-radius: 20px;
+      border-radius: 30px;
     }
   
     .navbar-flex {
